Fix: Alignment

--- a/src/app/components/newlandingpage/newlandingpage.component.css
+++ b/src/app/components/newlandingpage/newlandingpage.component.css
@@ -1,15 +1,16 @@
 :host {
   width: 100%;
-  height: 100vh;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  /* height: 100vh;
+  min-height: 100vh; */
+  /* display: flex;
+  flex-direction: column; */
 }
 
 section#header {
   width: 100%;
-  min-height: 80vh;
-  max-height: 80vh;
+  height: 80%;
+  /* min-height: 80vh;
+  max-height: 80vh; */
   position: relative;
   display: flex;
   flex-direction: column;
